deploy/k8s/grpc_greet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-greet
  labels:
    repo: gola
    app: greet
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      repo: gola
      app: greet
  template:
    metadata:
      labels:
        repo: gola
        app: greet
    spec:
      containers:
        - name: grpc-greet
          image: localhost:5000/gola/web:latest
          command:
            - ./gola
          args:
            - grpc
            - greet
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 50051

---
apiVersion: v1
kind: Service
metadata:
  name: grpc-greet
spec:
  selector:
    repo: gola
    app: greet
  ports:
    - port: 50051
      targetPort: 50051
