deploy/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gola-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: gola-server
              servicePort: 8000
